# MECT

./: .gitmodules  README.md  obu.py  rsu.py  vanetsa_comm.py
1Ano/1Semestre/AAD/: README.md
1Ano/1Semestre/AAD/assignment1/: XOR_Reduction.ods  excell.py
1Ano/1Semestre/AAD/assignment2/: EXCELL.xlsx  cyclicCircConvDouble.cu
1Ano/1Semestre/CM/: README.md
1Ano/1Semestre/RMI/: README.md
1Ano/2Semestre/ASE/Labs/: 01simpleLedBlink.c  02buttonLed.c  03lightAllDisplaySegment.c  04countToFFv01.c
1Ano/2Semestre/ASE/Projeto/: README.md  main.c
1Ano/2Semestre/ASE/Teorica/: README.md
1Ano/2Semestre/RSA/: README.md
1Ano/2Semestre/RSA/Exame/: resol.txt
1Ano/2Semestre/RSA/Resumos/: 1-VehicularNetworks.txt
1Ano/2Semestre/SD/: README.md
1Ano/2Semestre/SRC/: README.md
1Ano/2Semestre/SRC/Teorica/: README.md
1Semestre/AAD/Slides/: videos-yt.txt
1Semestre/AAD/assignment1/: 8xors.vhd  notas.txt  script.py
1Semestre/AC/: README.md
1Semestre/IC/: README.md
2Ano/CM/tpc_flutter/: pubspec.yaml
2Ano/EGS/troti_api/: Cargo.toml  Dockerfile  comandos.txt  docker-compose.yml
2Ano/EGS/troti_api/src/: main.rs
2Ano/PC/: Perguntas_Teste.docx  readme.md
2Semestre/ASE/: README.md
2Semestre/ASE/Labs/: 05countToFFv02.c
2Semestre/RSA/: README.md  vanetsa_comm.py
2Semestre/RSA/Project/: README.md  docker-compose.yml
2Semestre/RSA/Resumos/: 2-QoS.txt  3-MEC.txt
2Semestre/RSA/slides/: siglas
2Semestre/SD/Teorica/: README.md
2Semestre/SRC/: README.md
2Semestre/SRC/Teorica/: README.md
webapp/: index.html  server.py  test.html
(+240 files in other folders)
