[package]
name = "troti_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
utoipa = "3.4"
utoipa-swagger-ui = "9.0.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
postgres = "0.19"
